# titanic-mlops

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  dockerfile.api  dvc.yaml  params.yaml  predict.py  pyproject.toml  requirements-api.txt  requirements-batch.txt  server.py  setup_dagshub_dvc.ps1  setup_windows.bat  setup_windows.ps1  trainer.py
.dvc/: config
api/: main.py  model_loader.py  schemas.py
batch/: flow.py  motherduck.py  predictor.py
bruno/: 01_health.bru  02_model_info.bru  03_predict_single.bru  04_predict_batch.bru  05_predict_validation_error.bru  bruno.json
conf/: config.yaml
conf/data/: titanic.yaml
conf/model/: models.yaml
scripts/: load_test_data.py
src/: __init__.py  logger.py
src/ensemble/: __init__.py  ensemble.py
src/evaluation/: __init__.py  metrics.py
src/fake/: __init__.py
src/preprocessing/: __init__.py  preprocess.py
src/training/: __init__.py  model_factory.py  preprocess.py  registry.py  train.py  trainer.py
src/utils/: __init__.py  logger.py  system_metrics.py
tests/: conftest.py  test_metrics.py  test_preprocess.py  test_train.py
