[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic-mlops"
version = "0.3.0"
description = "ITI MLOps Lab 3 — Multi-Model Classification Pipeline with MLflow, Hydra & Optuna"
requires-python = ">=3.11"

dependencies = [
    # ── Core ML ──────────────────────────────────────────────────
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.12.0",

    # ── Gradient Boosting ─────────────────────────────────────────
    "xgboost>=2.0.0",
    "lightgbm>=4.3.0",
    "catboost>=1.2.0",

    # ── Deep Learning / TabNet ────────────────────────────────────
    "pytorch-tabnet>=4.1.0",
    # torch is a heavy dep — install manually per environment:
    # pip install torch --index-url https://download.pytorch.org/whl/cu121

    # ── MLOps ─────────────────────────────────────────────────────
    "mlflow>=2.12.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "optuna>=3.6.0",
    "optuna-integration[mlflow]>=3.6.0",
    "dvc>=3.49.0",
    "dvc-s3>=3.2.0",

    # ── System metrics ────────────────────────────────────────────
    "psutil>=5.9.0",
    "gputil>=1.4.0",         # GPU stats (NVIDIA)
    "pynvml>=11.5.0",        # NVIDIA Management Library

    # ── Utils ─────────────────────────────────────────────────────
    "loguru>=0.7.2",
    "rich>=13.7.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "joblib>=1.3.0",
    "imbalanced-learn>=0.12.0",
    "feature-engine>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "isort>=5.13.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ── Black ─────────────────────────────────────────────────────────
[tool.black]
line-length = 99
target-version = ["py311"]

# ── Ruff ──────────────────────────────────────────────────────────
[tool.ruff]
line-length = 99
select = ["E", "F", "I", "W"]
ignore = ["E501"]
target-version = "py311"

# ── isort ─────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 99

# ── Pytest ────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"
